Closed
Bug 399278
Opened 18 years ago
Closed 18 years ago
New Mail Notification PopUp shows BASE64 (Content-Transfer-Encoding treated as case sensitive)
Categories
(Thunderbird :: Mail Window Front End, defect)
Thunderbird
Mail Window Front End
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3
People
(Reporter: askwar, Assigned: mkmelin)
Details
Attachments
(3 files)
|
70.35 KB,
image/png
|
Details | |
|
3.63 KB,
message/rfc822
|
Details | |
|
2.68 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; de; rv:1.8.1.7) Gecko/20070920 Firefox/2.0.0.7
Build Identifier: Version 2.0.0.6 (20070802)
In the New Mail Notification popup, the body of base64 encoded mails isn't decoded. Because of that, only some unreadable gibberish is shown.
Reproducible: Always
Steps to Reproduce:
1. Receive a mail with Content-Transfer-Encoding: BASE64
Actual Results:
The first few words of the body is supposed to be shown. Instead, I see stuff like "MDkgT2N0b2JlciAyMDA3IC0gMDc6NTk6MjAg". That's because the mail is base64 encoded.
Expected Results:
The body should be decoded before the popup is shown, so that legible text is shown.
I'll attach a screenshot showing what I mean. In this screenshot, you'll see that I received a mail from http://trashmail.net/. To verify the bug, you might want to use that service as well.
| Reporter | ||
Comment 1•18 years ago
|
||
| Assignee | ||
Comment 2•18 years ago
|
||
Can you attach a sample mail showing the symptoms? (Save as .eml)
| Reporter | ||
Comment 3•18 years ago
|
||
Even better - you can do it yourself!
Go to http://trashmail.net/, create an e-mail address and you've got the testmail :-)
Anyway, attached is what you basically didn't need *g*
| Assignee | ||
Comment 4•18 years ago
|
||
Yep I see this. The problem it that we incorrectly treat the Content-Transfer-Encoding as case senstive.
Content-Transfer-Encoding is case insensitive per http://tools.ietf.org/html/rfc2045#page-14
Assignee: nobody → mkmelin+mozilla
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: PC → All
Summary: Thunderbird: New Mail Notification PopUp shows BASE64 → New Mail Notification PopUp shows BASE64 (Content-Transfer-Encoding treated as case sensitive)
Target Milestone: --- → Thunderbird 3
| Assignee | ||
Comment 5•18 years ago
|
||
Make it case insensitive.
Attachment #284768 -
Flags: superreview?(bienvenu)
Attachment #284768 -
Flags: review?(bienvenu)
Comment 6•18 years ago
|
||
Comment on attachment 284768 [details] [diff] [review]
proposed fix
good one, thx, Magnus.
Attachment #284768 -
Flags: superreview?(bienvenu)
Attachment #284768 -
Flags: superreview+
Attachment #284768 -
Flags: review?(bienvenu)
Attachment #284768 -
Flags: review+
| Assignee | ||
Comment 7•18 years ago
|
||
Thanks for the quick review:) Fix checked in.
Checking in mailnews/base/util/nsMsgDBFolder.cpp;
/cvsroot/mozilla/mailnews/base/util/nsMsgDBFolder.cpp,v <-- nsMsgDBFolder.cpp
new revision: 1.325; previous revision: 1.324
done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•18 years ago
|
||
Wow, I'm very positively impressed - less than 1 week to get this fixed.
Thanks a lot for the work you put into it!
You need to log in
before you can comment on or make changes to this bug.
Description
•