[Bug 399278] New Mail Notification PopUp shows BASE64 ( Content-Transfer-Encoding treated as case sensitive) r+sr=bienvenu